--- a/Challenge1/index.css
+++ b/Challenge1/index.css
@@ -2,6 +2,8 @@ html,
 body {
   margin: 0;
   padding: 0;
+  background-color: var(--body-bg);
+  font-family: var(--font-family);
 }
 
 :root {
@@ -15,4 +17,62 @@ body {
   --grade-color1: #ee5d6c;
   --grade-color1: #ce4993;
   --grade-color1: #6a0d83;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.button-border {
+  background: linear-gradient(
+    115deg,
+    #eeaf61,
+    #fb9062,
+    #ee5d6c,
+    #ce4993,
+    #6a0d83
+  );
+  padding: 0.7px 2px 2px 2px;
+}
+
+.button {
+  border: none;
+  background: var(--btn-bg);
+  color: var(--btn-color);
+  padding: 1em, 1.5em;
+  font-family: inherit; /* # button element will keep the browser default font, unless you specify */
+  letter-spacing: 0.1 em;
+  /* Another way to do border gradient
+  border-image:  linear-gradient(
+    115deg,
+    #eeaf61,
+    #fb9062,
+    #ee5d6c,
+    #ce4993,
+    #6a0d83
+  );
+  border-image-slice: 1;
+  
+  But this way cannot be compatiable with border-raduis
+  
+  */
+}
+
+.button-border:hover {
+  background: linear-gradient(
+    230deg,
+    #eeaf61,
+    #fb9062,
+    #ee5d6c,
+    #ce4993,
+    #6a0d83
+  );
+}
+
+.button-border:hover .button {
+  color: var(--btb-color-hover);
+  padding: 1.1em, 1.6em;
 }
